# tieba-thread-archive

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
protobuf/: README.md  compile.py
protobuf/source/common/: PbContent.proto  Post.proto  SimpleForum.proto
src/local/: __init__.py  utils.py
src/local/archive/: __init__.py
src/local/archive/v2/: __init__.py  load.py  models.py
src/local/archive/v3/: dump.py  file_structure.py  load.py  validate.py
src/models/: archive.py  forum.py  post.py  user.py
src/remote/: thread.py
src/remote/api/base/: get_forum_detail.py
src/remote/api/helpers/: pack.py  quick_api.py  sign.py
src/remote/protobuf/common/: ForumList_pb2.pyi  FrsTabInfo_pb2.pyi  Media_pb2.pyi  Page_pb2.pyi  PollInfo_pb2.pyi  Post_pb2.pyi  SimpleForum_pb2.py  SubPostList_pb2.pyi  ThreadInfo_pb2.py  User_pb2.pyi
src/remote/protobuf/request/: GetUserInfoReqIdl_pb2.pyi  PbFloorReqIdl_pb2.pyi
src/remote/protobuf/response/: GetUserInfoResIdl_pb2.pyi  PbFloorResIdl_pb2.pyi  PbPageResIdl_pb2.pyi
src/tieba_thread_archive/local/archive/: __init__.py  archive.py  (+2 more)
src/tieba_thread_archive/models/: agree.py  archive.py  content.py  forum.py  post.py  progress.py  user.py
src/tieba_thread_archive/remote/: thread.py
src/tieba_thread_archive/utils/: android_id.py  cuid.py
src/utils/: __init__.py  imei.py
tests/: conftest.py
tests/local/v3/: test_av3_archive.py
tests/models/: test_archive.py  test_post.py
tests/models/mock/: __init__.py  agree.py  archive.py  common.py  content.py  forum.py  post.py  user.py
(+57 files in other folders)
